  Jetty plugin module added, split from rest plugin
  Entities.getDomainID() added, now uses the simple class name for domain ids
  EntityRESTService, added domainID parameter to api
  EmpDeptRESTLoadTest updated accordingly
  ExceptionUtil removed
  EntityJSONParser refactored, now uses ThreadLocal date formats
  JettyServer, logging added
  Major cosmetic surgery, entityID, propertyID and domainID changed to entityId, propertyId and domainId respectively, all IDs replaced with Ids
  db-http module added
  EntityRESTService assumes parameters are base64 encoded byte array, now uses EntityConditions, api simplified
  DefaultHttpEntityConnection, almost fully implemented
  DefaultHttpEntityConnection, EntityRESTService, exception handling improved, refactored
  DefaultHttpEntityConnection renamed to HttpEntityConnection
  EntityRESTService, clientTypeId is now a required header
  HttpEntityConnection and EntityRESTService no longer wrap parameters and results in a List
  Util.serializeAndBase64Encode() removed superfluous generic parameter
  HttpEntityConnection and EntityConditions, added a few null checks
  EntityRESTService now handles changing clientIds
  HttpEntityConnection, some refactoring
  Jetty plugin promoted into common-server-http module
  Preparing rest module for promotion to framework-servlet module, continued, and continued
  Rest module promoted to framework-servlet
  EntityRESTService renamed to EntityServlet and EntityRESTServer renamed to EntityServletServer
  Preparing db-http plugin for promotion to framework-db-http module
  db-http module promoted to framework-db-http module
  Cleanup after module promotions
  More cleanup
  EntityServlet, domainId parameter moved to header
  AbstractRemoteEntityConnection.RemoteEntityConnectionHandler, removed redundant methodLogger null check
  EntityServlet now uses POST only, assumes byte request data
  EntityServlet responses are no longer base64 encoded