@@ -4629,3 +4629,4 @@
   AbstractRemoteEntityConnection.RemoteEntityConnectionHandler, removed redundant methodLogger null check
   EntityServlet now uses POST only, assumes byte request data
   EntityServlet responses are no longer base64 encoded
+  EntityServlet renamed to EntityService
